# dice_server

./: Cargo.toml  otel-config.yaml  run_collector.sh  run_jaeger.sh
src/: dice_server.rs
