[package]
name = "dice_server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "dice_server"
path = "src/dice_server.rs"
doc = false

[dependencies]
tokio = { version = "1.40", features = ["full"] }
actix-web = "4"
rand = { version = "0.8" }
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["tonic"] }
opentelemetry-semantic-conventions = { version = "0.26" }
